--- a/index.html
+++ b/index.html
@@ -77,9 +77,9 @@
     <div id="follow-along">
         <h2>Follow Along Chart</h2>
         <button class="play-button small-button" onclick="playSelectedSounds()">Play Selected Sounds</button>
-        <button class="small-button" onclick="clearFollowAlong()">Clear Follow Along Chart</button>
+        <div id="dynamic-content"></div>
     </div>
-    <button id="clear-chart-button" class="small-button">Clear Chart</button>
+    <button id="clear-chart-button" onclick="clearFollowAlong()">Clear the Follow Along Chart</button>    
     <button id="space-button" class="small-button" onclick="addSpace()">Add Space</button>
     <script>
         const phoneticSounds = {
